--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Atomic Towers</string>
     <string name="start">Start</string>
     <string name="towers">Towers</string>
+    <string name="energy_count">Energy:  %1$d J</string>
 </resources>
