--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,9 @@
     <string name="app_name">Atomic Towers</string>
     <string name="start">Start</string>
     <string name="towers">Towers</string>
-    <string name="energy_count">Energy:  %1$d J</string>
+    <string name="energy_count"><b>Energy:</b>  %1$d J</string>
+    <string name="pause">Pause</string>
+    <string name="electron_shooter">Electron Shooter</string>
+    <string name="resume">Resume</string>
+    <string name="home">Home</string>
 </resources>
