Implemented main screen menu, as well as settings and instructions screens

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,10 @@
     <string name="electron_shooter">Electron Shooter</string>
     <string name="resume">Resume</string>
     <string name="home">Home</string>
+    <string name="menu">Menu</string>
+    <string name="settings">Settings</string>
+    <string name="instructions">Instructions</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="back">Back</string>
 </resources>
