Implemented service to save game state and added other changes
Change Log:
1) Implemented GameStateService, which writes the paused game's state to internal memory for later use.
2) Added data classes for saving and retrieving game state data (as well as serializing).
3) Added new methods (in Util.java and GameRepository.java) for reading files from internal memory.
4) Created new Tower class for all towers to extend from. ElectronShooter is the only one to extend the class currently.
5) Atoms now post their position every time they change position, in contrary to recent "fix", where atoms would only post their position when they move to a new tile.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
 
     <!-- Content strings -->
     <string name="app_name">Atomic Towers</string>
+    <string name="game_state_service_description">Saves current paused Atomic Towers game state</string>
     <string name="start">Start</string>
     <string name="towers">Towers</string>
     <string name="energy_count"><b>Energy:</b>  %1$d J</string>
