Implemented prompt to resume last game from saved game state
Change Log:
1) Atoms and Towers now can be created from a saved game state.
2) Added new methods to create Atoms and Towers from saved game state.
3) New dialog to prompt user if to create a new game or continue last one (from saved game state), if it has been saved.
4) New method in GameRepository.java to retrieve the saved game state, as well as a new method in Util.java to check if a file exists in internal storage.
5) Added Safe-Args dependencies to project, to pass SaveGameState objects between fragments.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="about">About</string>
     <string name="credits">Credits</string>
     <string name="credits_content_text"><a href="http://dig.ccmixter.org/files/gurdonark/61313">Memories of Better Times</a> by gurdonark © copyright 2020 Licensed under a Creative Commons <a href="http://creativecommons.org/licenses/by-nc/3.0/">Attribution Noncommercial (3.0)</a> license. Ft: Essesq</string>
+    <string name="resume_last_game_prompt">Resume last game?</string>
+    <string name="new_game">New Game</string>
 </resources>
